--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
   publish = "public"
-  command = "npm run build"
+  command = "yarn build"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "10"
 
 [[plugins]]
   package = "netlify-plugin-gatsby-cache"
