--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mdx-js/util": "^1.6.22",
     "aos": "^2.3.4",
     "gatsby": "^2.21.0",
     "gatsby-plugin-dark-mode": "^1.1.1",
@@ -58,5 +59,23 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+  },
+  "resolutions": {
+    "remark-mdx": "^1.6.22",
+    "glob": "^7.2.0",
+    "minimatch": "^5.1.6",
+    "cheerio": "^1.0.14",
+    "undici": "^5.28.4",
+    "@mdx-js/util": "^1.6.22",
+    "remark-mdxjs": "^1.6.22"
+  },
+  "overrides": {
+    "remark-mdx": "^1.6.22",
+    "glob": "^7.2.0",
+    "minimatch": "^5.1.6",
+    "cheerio": "^1.0.14",
+    "undici": "^5.28.4",
+    "@mdx-js/util": "^1.6.22",
+    "remark-mdxjs": "^1.6.22"
   }
 }
