--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,9 @@
 [build]
   publish = "public"
-  command = "npm run build:netlify"
+  command = "npm install && npm run build"
 
 [build.environment]
   NODE_VERSION = "18.20.3"
-  NPM_FLAGS = "--legacy-peer-deps"
 
 [[plugins]]
   package = "netlify-plugin-gatsby-cache"
