--- a/package.json
+++ b/package.json
@@ -8,37 +8,35 @@
     "url": "https://github.com/W3Layouts/gatsby-starter-delog/issues"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mdx-js/util": "^1.6.22",
     "aos": "^2.3.4",
-    "gatsby": "^2.21.0",
-    "gatsby-plugin-dark-mode": "^1.1.1",
-    "gatsby-plugin-google-analytics": "^2.1.36",
-    "gatsby-plugin-manifest": "^2.4.1",
-    "gatsby-plugin-netlify-cms": "^4.1.38",
-    "gatsby-plugin-offline": "^3.2.0",
-    "gatsby-plugin-react-helmet": "^3.1.22",
-    "gatsby-plugin-sass": "^2.1.28",
-    "gatsby-plugin-sitemap": "^2.4.0",
-    "gatsby-remark-emojis": "^0.4.2",
-    "gatsby-remark-prismjs": "^3.3.31",
-    "gatsby-source-filesystem": "^2.1.48",
-    "gatsby-transformer-remark": "^2.6.53",
-    "netlify-cms-app": "^2.11.13",
-    "node-sass": "^4.13.1",
-    "prismjs": "^1.19.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "react-scroll": "^1.8.7",
-    "reactstrap": "^9.1.4",
-    "sweetalert2": "^10.0.0",
-    "sweetalert2-react-content": "^3.2.2"
+    "gatsby": "^4.25.8",
+    "gatsby-plugin-dark-mode": "^1.1.2",
+    "gatsby-plugin-google-gtag": "^4.25.0",
+    "gatsby-plugin-manifest": "^4.25.0",
+    "gatsby-plugin-react-helmet": "^5.25.0",
+    "gatsby-plugin-sass": "^5.25.0",
+    "gatsby-plugin-sitemap": "^5.25.0",
+    "gatsby-remark-emojis": "^0.4.3",
+    "gatsby-remark-prismjs": "^6.25.0",
+    "gatsby-source-filesystem": "^4.25.0",
+    "gatsby-transformer-remark": "^5.25.0",
+    "netlify-cms-app": "^2.15.72",
+    "prismjs": "^1.29.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-scroll": "^1.9.0",
+    "reactstrap": "^9.2.0",
+    "sass": "^1.66.1",
+    "sweetalert2": "^11.7.31",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
+    "ajv": "^8.12.0",
     "gatsby-plugin-disqus": "^1.2.3",
     "prettier": "^1.19.1"
   },
@@ -52,7 +50,7 @@
     "url": "git+https://github.com/W3Layouts/gatsby-starter-delog.git"
   },
   "scripts": {
-    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
+    "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
